--- a/index.html
+++ b/index.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -22,10 +21,68 @@
     <link href="https://cdn.jsdelivr.net/npm/daisyui@5" rel="stylesheet" type="text/css" />
     <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
 </head>
-
 <body>
-    <h1 class="text-4xl">English janala is cooking</h1>
+    <!-- navbar stare hear -->
+    <header>
+        <div class="navbar bg-base-100 shadow-sm px-8">
+  <div class="navbar-start">
+    <div class="dropdown">
+      <div tabindex="0" role="button" class="btn btn-ghost lg:hidden">
+        <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5" fill="none" viewBox="0 0 24 24" stroke="currentColor"> <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 6h16M4 12h8m-8 6h16" /> </svg>
+      </div>
+      <ul
+        tabindex="0"
+        class="menu menu-sm dropdown-content bg-base-100 rounded-box z-1 mt-3 w-52 p-2 shadow">
+     <li>
+        <a href="" class=""><i class="fa-solid fa-circle-question"></i>FAQ</a></a>
+      </li>
+      <li>
+        <a href="" class=""><i class="fa-solid fa-book-open"></i>Learn</a></a>
+      </li>
+      <li>
+        <a href="" class=""><i class="fa-solid fa-arrow-right-from-bracket"></i>Logout</a></a>
+      </li>
+    </div>
+    <a href="" class="flex items-center gap-1">
+     <span class="text-xl font-bold">English</span>
+     <img src="assets/logo.png" alt="">
+     <span class="font-bangla text-xl font-semibold">জানালা</span>
+    </a>
+  </div>
+  <div class="navbar-end hidden lg:flex">
+    <ul class="menu menu-horizontal px-1 space-x-4">
+      <li>
+        <a href="" class="btn btn-outline btn-primary"><i class="fa-solid fa-circle-question"></i>FAQ</a></a>
+      </li>
+      <li>
+        <a href="" class="btn btn-outline btn-primary"><i class="fa-solid fa-book-open"></i>Learn</a></a>
+      </li>
+      <li>
+        <a href="" class="btn btn-outline btn-primary"><i class="fa-solid fa-arrow-right-from-bracket"></i>Logout</a></a>
+      </li>
+    </ul>
+  </div>
+</div>
+    </header>
+    <!-- herro section start hear -->
+    <section>
+        <div class="flex flex-col-reverse md:flex-row items-center py-5 w-11/12 mx-auto">
+             <div class="laft-said flex-1">
+           <h1 class="text-4xl font-bold text-center md:text-left"><span class="text-sky-500">English</span> is Easy!!</h1>
+           <p class="font-bangla mt-8 text-xl text-center md:text-left">
+             আজ থেকেই আপনার ভাষা শেখার যাত্রা শুরু করুন। আপনি যদি নতুন হন অথবা <br>আপনার দক্ষতা বাড়াতে চান, আমাদের Interactive Lessons আপনাকে নিয়ে যাবে <br> অন্য একটি Level এ
+           </p>
+            <input type="text" placeholder="Enter Your Name" class="input input-neutral mt-8 mx-auto block md:mx-0"/><br>
+           <input type="text" placeholder=". . . . . . . . ." class="input input-neutral mt-2 md:mt-6 mx-auto block md:mx-0" /><br>
+           <button class="btn btn-primary mt-2 md:6 mx-auto block md:mx-0">Get Started</button>
+        </div>
+        <div class="right-said flex-1">
+            <img src="assets/hero-student.png" alt="">
+        </div>
+        </div>
+    </section>
+    <!-- Vocabulari section staet hear -->
+
     <script src="script.js"></script>
 </body>
-
 </html>
